# ipfs-poc

./: .gitmodules  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: MainPage.vue
