[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
ipfs-api = { version = "0.15.0", features = ["with-actix"], default-features = false }
pqcrypto-dilithium = "0.4.5"
pqcrypto-traits = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
base64 = "0.13.0"
bincode = "1.3.3"
lazy_static = "1.4.0"